# torchrir

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  NOTICE  README.md  THIRD_PARTY_DATASETS.md  TODO.md  cliff.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  cuda-ci.yml  release.yml
docs/: api.md  api.rst  changelog.md  comparisons.md  conf.py  datasets.md  examples.md  getting-started.md  index.md  overview.md  requirements.txt
examples/: benchmark_device.py  build_dynamic_dataset.py  cli.py  cmu_arctic_dynamic_dataset.py  cmu_arctic_scene_utils.py  dynamic_mic.py  dynamic_src.py  librispeech_dynamic_dataset.py  static.py
src/torchrir/: __init__.py  animation.py  config.py  core.py  directivity.py  dynamic.py  logging.py  logging_utils.py  plotting.py  plotting_utils.py  results.py  room.py  scene.py  scene_utils.py  signal.py  simulators.py  utils.py
src/torchrir/datasets/: __init__.py  _archive.py  attribution.py  base.py  cmu_arctic.py  collate.py  dynamic_cmu_arctic.py  librispeech.py  template.py  utils.py
src/torchrir/experimental/: __init__.py  datasets.py  simulators.py
src/torchrir/geometry/: arrays.py  sampling.py  trajectories.py
src/torchrir/infra/: __init__.py
src/torchrir/io/: __init__.py  audio.py  metadata.py  outputs.py
src/torchrir/models/: __init__.py  results.py  room.py  scene.py
src/torchrir/signal/: __init__.py  dynamic.py  internal.py  static.py
src/torchrir/sim/: __init__.py  directivity.py  simulators.py
src/torchrir/sim/ism/: accumulate.py  api.py  contributions.py  (+6 more)
src/torchrir/util/: __init__.py  acoustics.py  cli.py  device.py  orientation.py  tensor.py
src/torchrir/viz/: __init__.py  animation.py  io.py  scene.py  utils.py
tests/: test_compare_gpurir.py  test_compare_pyroomacoustics.py  test_core.py  test_dataset_security.py  test_device_parity.py  test_dynamic_cmu_arctic_builder.py  test_io.py  test_plotting.py  test_room.py  test_scene.py  test_signal.py  test_utils.py  test_viz_style.py  test_viz_video.py
