[project]
name = "torchrir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pillow>=11.2.1",
    "pyroomacoustics>=0.9.0",
    "pytest>=9.0.2",
    "soundfile>=0.13.1",
]
