[project]
name = "torchrir"
version = "0.1.0"
description = "PyTorch-based room impulse response (RIR) simulation toolkit for static and dynamic scenes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.10.0",
]

[project.urls]
Repository = "https://github.com/taishi-n/torchrir"

[dependency-groups]
dev = [
    "git-cliff>=2.10.1",
    "matplotlib>=3.10.8",
    "pillow>=11.2.1",
    "pyroomacoustics>=0.9.0",
    "pytest>=9.0.2",
    "soundfile>=0.13.1",
    "sphinx>=7.0,<8.2.3",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0,<4.0",
]
