[project]
name = "torchrir"
version = "0.6.2"
description = "PyTorch-based room impulse response (RIR) simulation toolkit for static and dynamic scenes."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=2.2.6",
  "torch>=2.10.0",
  "scipy>=1.14.0",
  "soundfile>=0.13.1",
]

[project.urls]
Repository = "https://github.com/taishi-n/torchrir"

[dependency-groups]
dev = [
  "commitizen>=3.29.0",
  "git-cliff>=2.10.1",
  "matplotlib>=3.10.8",
  "pillow>=11.2.1",
  "ruff>=0.12.2",
  "ty>=0.0.14,<0.1",
]
docs = [
  "sphinx>=7.0,<8.2.3",
  "sphinx-rtd-theme>=2.0.0",
  "myst-parser>=2.0,<4.0",
]
test = ["pyroomacoustics>=0.9.0", "pytest>=9.0.2"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
pre_bump_hooks = ["uv lock"]
